default/objects/Teacher__c/fields/Education__c.field-meta.xml
<CustomField>
    <fullName>Education__c</fullName>
    <label>Education</label>
    <length>80</length>
    <type>Text</type>
</CustomField>