default/objects/Teacher__c/fields/Emp_Id__c.field-meta.xml
<CustomField>
    <fullName>Emp_Id__c</fullName>
    <label>Emp Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>