default/objects/Teacher__c/fields/Joinning_Date__c.field-meta.xml
<CustomField>
    <fullName>Joinning_Date__c</fullName>
    <label>Joinning Date</label>
    <type>Date</type>
</CustomField>