default/objects/Teacher__c/fields/Sallary__c.field-meta.xml
<CustomField>
    <fullName>Sallary__c</fullName>
    <label>Sallary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>