default/objects/Teacher__c/fields/Satus__c.field-meta.xml
<CustomField>
    <fullName>Satus__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Status</valueSetName>
    </valueSet>
</CustomField>