default/objects/Teacher__c/fields/Subjects__c.field-meta.xml
<CustomField>
    <fullName>Subjects__c</fullName>
    <label>Subjects</label>
    <length>80</length>
    <type>Text</type>
</CustomField>