default/objects/Teacher__c/fields/Teacher_Country__c.field-meta.xml
<CustomField>
    <fullName>Teacher_Country__c</fullName>
    <label>Teacher Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country1</valueSetName>
    </valueSet>
</CustomField>